kubernetes/statefulset-persistent/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: centos-xfce-ja
spec:
  serviceName: centos-xfce-ja
  selector:
    matchLabels:
      app: centos-xfce-ja
  replicas: 1
  template:
    metadata:
      labels:
        app: centos-xfce-ja
    spec:
      containers:
      - name: centos
        image: tmatsuo/centos-xfce-ja
        livenessProbe:
          exec:
            command:
            - "curl"
            - "-s"
            - "-f"
            - "--insecure"
            - "-o"
            - "/dev/null"
            - "http://127.0.0.1:8080/desktop/vnc_lite.html"
            - "&&"
            - curl
            - "-s"
            - "-f"
            - "--insecure"
            - "-o"
            - "/dev/null"
            - "http://127.0.0.1:8080/term/static/main.css"
          initialDelaySeconds: 10
          failureThreshold: 3
          periodSeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: centos-xfce-ja
          mountPath: "/volume"
        - name: centos-xfce-ja
          subPath: "root"
          mountPath: "/root"
        - name: centos-xfce-ja
          subPath: "usr"
          mountPath: "/usr"
        - name: centos-xfce-ja
          subPath: "etc"
          mountPath: "/etc"
        - name: centos-xfce-ja
          subPath: "var"
          mountPath: "/var"
        - name: centos-xfce-ja
          subPath: "run"
          mountPath: "/run"
        - name: centos-xfce-ja
          subPath: "home"
          mountPath: "/home"
        - name: centos-xfce-ja
          subPath: "opt"
          mountPath: "/opt"
        - name: centos-xfce-ja
          subPath: "srv"
          mountPath: "/srv"
        - name: centos-xfce-ja
          subPath: "headless"
          mountPath: "/headless"
        - name: shm
          mountPath: "/dev/shm"
      volumes:
      - name: centos-xfce-ja
        persistentVolumeClaim:
          claimName: centos-xfce-ja
      - name: shm
        emptyDir:
          medium: Memory
